# moltenvk

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/src/: nuklear.frag  nuklear.vert  test.frag  test.vert  voxel.vert
scripts/: build.sh
shaders/src/: test.frag  test.vert
src/: main.c  main.cpp
src/app/: app.c  app.cpp  app.h  camera.c  camera.h
src/app/world/: grid.h  world.c  world.h  world_internal.h
src/backend/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_backend_internal.h  vulkan_commands.c  vulkan_device.c  vulkan_frame.c  vulkan_memory.c  vulkan_pipeline.c  vulkan_swapchain.c
src/core/: core.h  file.c  log.c  log.h  types.h
src/core/log/: log.c
src/core/math/: math.h  projection.c  view.c
src/platform/: frame_context.h  gpu_mesh.h  input.c  pipeline.h  platform.c  platform.h  platform_input.c  platform_internal.h  platform_window.c  render.c  render.cpp  render.h  renderer.cpp  renderer.h  swapchain_context.h  vulkan_context.h  window.c
src/render/: image.c  mesh.c  nuklear_context.c  render.c  render.h  render_internal.h  vulkan_commands.c  vulkan_device.c  vulkan_frame.c  vulkan_memory.c  vulkan_pipeline.c  vulkan_swapchain.c
src/renderer/: image.c  mesh.c  renderer.c  renderer.h  renderer_internal.h
